--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-luametatex (2.10.07-1) experimental; urgency=medium
+luametatex (2.10.07-1) unstable; urgency=medium
 
   * Initial release. (Closes: #1034501)
 
- -- Hilmar Preusse <hille42@web.de>  Mon, 17 Apr 2023 09:33:47 +0200
+ -- Hilmar Preusse <hille42@web.de>  Thu, 15 Jun 2023 00:05:46 +0200
