--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 luametatex (2.10.08+ds-2) UNRELEASED; urgency=medium
 
   * Hard code MY_MAXPATHLEN in case MAXPATHLEN is not defined (see HURD).
+  * Update d/gbp.conf.
 
  -- Hilmar Preusse <hille42@web.de>  Sun, 15 Oct 2023 22:48:22 +0200
 
