--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-luametatex (2.10.08+ds-2) UNRELEASED; urgency=medium
+luametatex (2.11.01+ds-1) UNRELEASED; urgency=medium
 
-  * Hard code MY_MAXPATHLEN in case MAXPATHLEN is not defined (see HURD).
+  * New upstream release, refresh patches.
+    - Should fix build failure on HURD.
   * Update d/gbp.conf.
 
- -- Hilmar Preusse <hille42@web.de>  Sun, 15 Oct 2023 22:48:22 +0200
+ -- Hilmar Preusse <hille42@web.de>  Sun, 18 Feb 2024 12:28:49 +0100
 
 luametatex (2.10.08+ds-1) unstable; urgency=medium
 
