--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ luametatex (2.11.01+ds-1) UNRELEASED; urgency=medium
 
   * New upstream release, refresh patches.
     - Should fix build failure on HURD.
+    - Contains a local copy of potrace -> extend d/copyright.
   * Update d/gbp.conf.
 
  -- Hilmar Preusse <hille42@web.de>  Sun, 18 Feb 2024 12:28:49 +0100
