--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ luametatex (2.11.01+ds-1) UNRELEASED; urgency=medium
     - Redo d/patches/no_strip.diff, stripping is configured in a
       different file.
   * Update d/gbp.conf.
+  * Link luametatex with libatomic on m68k, powerpc and sh4. Should fix
+    FTBFS on these arches.
 
  -- Hilmar Preusse <hille42@web.de>  Sun, 18 Feb 2024 12:28:49 +0100
 
