--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-luametatex (2.11.01+ds-1) UNRELEASED; urgency=medium
+luametatex (2.11.01+ds-1) unstable; urgency=medium
 
   * New upstream release, refresh patches.
     - Should fix build failure on HURD.
@@ -9,7 +9,7 @@ luametatex (2.11.01+ds-1) UNRELEASED; urgency=medium
   * Link luametatex with libatomic on m68k, powerpc and sh4. Should fix
     FTBFS on these arches.
 
- -- Hilmar Preusse <hille42@web.de>  Sun, 18 Feb 2024 12:28:49 +0100
+ -- Hilmar Preusse <hille42@web.de>  Tue, 20 Feb 2024 08:23:29 +0000
 
 luametatex (2.10.08+ds-1) unstable; urgency=medium
 
