--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+luametatex (2.11.01+ds-2) unstable; urgency=medium
+
+  * armel needs linking with libatomic too.
+
+ -- Hilmar Preusse <hille42@web.de>  Tue, 20 Feb 2024 23:26:24 +0100
+
 luametatex (2.11.01+ds-1) unstable; urgency=medium
 
   * New upstream release, refresh patches.
