--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+luametatex (2.11.01+ds-3-really-2.10.08+ds) UNRELEASED; urgency=medium
+
+  * Downgrade to 2.10.08 (Closes: #1064402).
+
+ -- Hilmar Preusse <hille42@web.de>  Fri, 01 Mar 2024 23:30:05 +0100
+
 luametatex (2.11.01+ds-2) unstable; urgency=medium
 
   * armel needs linking with libatomic too.
