--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+luametatex (2.11.01+really2.11.01+ds-1) UNRELEASED; urgency=medium
+
+  * Reupload version 2.11.01 for TL 2024.
+
+ -- Hilmar Preusse <hille42@web.de>  Sun, 21 Apr 2024 16:35:11 +0200
+
 luametatex (2.11.01+really2.10.08+ds-1) unstable; urgency=medium
 
   * Downgrade to 2.10.08 (Closes: #1064402).
