Finalize for upload to experimental.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-luametatex (2.11.01+really2.11.01+ds-1) UNRELEASED; urgency=medium
+luametatex (2.11.01+really2.11.01+ds-1) experimental; urgency=medium
 
   * Reupload version 2.11.01 for TL 2024.
 
