--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+luametatex (2.11.01+really2.11.01+ds-2) UNRELEASED; urgency=medium
+
+  * Add Breaks statement for old context.
+
+ -- Hilmar Preusse <hille42@web.de>  Mon, 29 Apr 2024 08:22:04 +0200
+
 luametatex (2.11.01+really2.11.01+ds-1) experimental; urgency=medium
 
   * Reupload version 2.11.01 for TL 2024.
