--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-luametatex (2.11.01+really2.11.01+ds-2) UNRELEASED; urgency=medium
+luametatex (2.11.02+ds-1) experimental; urgency=medium
 
+  * New upstream version.
+    See https://github.com/contextgarden/luametatex/issues/12
   * Add Breaks statement for old context.
 
- -- Hilmar Preusse <hille42@web.de>  Mon, 29 Apr 2024 08:22:04 +0200
+ -- Hilmar Preusse <hille42@web.de>  Wed, 15 May 2024 23:53:44 +0200
 
 luametatex (2.11.01+really2.11.01+ds-1) experimental; urgency=medium
 
