--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+luametatex (2.11.02+ds-2) UNRELEASED; urgency=medium
+
+  * Add patches from upstream to fix build failures on arches, where
+    ‘__builtin_thread_pointer’ is not supported.
+    https://github.com/microsoft/mimalloc/issues/883 .
+
+ -- Hilmar Preusse <hille42@web.de>  Thu, 16 May 2024 08:28:59 +0200
+
 luametatex (2.11.02+ds-1) experimental; urgency=medium
 
   * New upstream version.
