Patch handling, see d/changelog.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
 luametatex (2.11.02+ds-3) UNRELEASED; urgency=medium
 
   * Link dynamically with mimalloc.
+  * Patch handling:
+    - adding, fixing DEP-3 headers
+    - removing obsolete patch
 
  -- Hilmar Preusse <hille42@web.de>  Sat, 18 May 2024 12:10:25 +0200
 
