--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+luametatex (2.11.02+ds-4) unstable; urgency=medium
+
+  * Upload to unstable.
+
+ -- Hilmar Preusse <hille42@web.de>  Wed, 05 Jun 2024 14:13:07 +0200
+
 luametatex (2.11.02+ds-3) experimental; urgency=medium
 
   * Link dynamically with mimalloc.
