--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+luametatex (2.11.02+really2.11.01+ds-1) UNRELEASED; urgency=medium
+
+  * 
+
+ -- Hilmar Preusse <hille42@web.de>  Wed, 12 Jun 2024 23:31:21 +0200
+
 luametatex (2.11.02+ds-4) unstable; urgency=medium
 
   * Upload to unstable.
